--- a/css/estilo.css
+++ b/css/estilo.css
@@ -76,10 +76,31 @@ body.fotos #navegacao a#fotos
 	background: #f5f5f5;
 }
 
+#lateral{
+	width: 180px;
+	float: left;
+	margin: 0 0 20px -750px;
+}
+
 #primario{
 	width: 270px;
 	float: left;
 	margin: 0 0 20px 195px;
+}
+
+#tres-colunas #primario{
+	width: 270px;
+	float: left;
+	margin: 0 0 20px 195px;
+}
+
+#uma-coluna #primario{
+	width: 750px;
+	margin: 0 0 20px 0px;
+}
+
+#duas-colunas #primario{
+	width: 555px;
 }
 
 #secundario{
@@ -88,11 +109,6 @@ body.fotos #navegacao a#fotos
 	margin: 0 0 20px 15px;
 }
 
-#lateral{
-	width: 180px;
-	float: left;
-	margin: 0 0 20px -750px;
-}
 
 #container-rodape{
 	background: #294c71;
@@ -103,4 +119,23 @@ body.fotos #navegacao a#fotos
 	width: 750px;
 	margin: 0 auto;
 	color: #fff;
+}
+
+.caixa{
+	margin: 10px 0px;
+	padding: 5px;
+	background: #f3f3f3 url(../imagens/fundo-caixa.png);
+}
+
+.caixa-conteudo{
+	background: #fff;
+	padding: 5px;
+	margin-top: 5px;
+}
+
+h2{
+	font-size: 1em;
+	background: #294c71;
+	color: #fff;
+	padding: 5px;
 }
